--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dev_dependencies:
   searchable_dropdown: ^1.1.3
   searchfield: ^0.5.6
   material_floating_search_bar: ^0.3.6
+  percent_indicator: ^4.0.0
+  url_launcher: ^6.0.20
   
 
 # For information on the generic Dart part of this file, see the
