--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="youbooks_app"
+        android:label="Youbooks"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
