--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,13 +59,16 @@ dev_dependencies:
   material_floating_search_bar: ^0.3.6
   percent_indicator: ^4.0.0
   url_launcher: ^6.0.20
+  flutter_native_splash: ^2.0.4
+  font_awesome_flutter: ^9.2.0
+  rename: ^2.0.1
   
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 flutter_icons:
-  image_path: "assets/cover.png"
-  ios: false
+  image_path: "assets/play_store_512.png"
+  ios: true
   android: true
 # The following section is specific to Flutter.
 flutter:
@@ -77,6 +80,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/cover.png"
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
