--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   flutter_native_splash: ^2.0.4
   font_awesome_flutter: ^9.2.0
   rename: ^2.0.1
+  top_snackbar_flutter: ^1.0.2
   
 
 # For information on the generic Dart part of this file, see the
